# node/src/main/resources/swagger-ui/swagger.json
@@ -1644,33 +1644,6 @@
         }
       }
     },
-    "/blockchain/rewards/{height}": {
-      "get": {
-        "tags": [
-          "blockchain"
-        ],
-        "summary": "Reward status",
-        "description": "Get miner’s reward status at height",
-        "operationId": "rewardsAtHeight_1",
-        "parameters": [
-          {
-            "name": "height",
-            "in": "path",
-            "description": "Target block height",
-            "required": true,
-            "type": "integer"
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "successful operation",
-            "schema": {
-              "$ref": "#/definitions/RewardStatus"
-            }
-          }
-        }
-      }
-    },
     "/transactions/status": {
       "get": {
         "tags": [
